#I972IT 添加搜索框

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="jquery-3.7.1.min.js"></script>
+    <script src="搜索.js"></script>
     <title>目录</title>
 </head>
 <body>
     这里已聚合了 28 个博客，共计 4048 篇博文，跨越十多年的时光
+
+    <input id="搜索" type="text" placeholder="找找···">
     <ol>
         
         <li><a href=codeinchinese.com/%E5%9C%A8%E5%9B%BD%E4%BA%A7%E5%8C%96%E7%BC%96%E8%AF%91%E5%99%A8%E7%9A%84%E5%8F%91%E5%B1%95%E8%BF%87%E7%A8%8B%E4%B8%AD%E9%81%87%E5%88%B0%E8%BF%87%E5%93%AA%E4%BA%9B%E6%8C%91%E6%88%98%EF%BC%9F.html>2024-03-01 在国产化编译器的发展过程中遇到过哪些挑战？</a></li>
