重生成: 修正部分原文链接,但取git时间戳导致另一些原文链接出错

--- a/iphyer.github.io/USA印象6:得克萨斯州——奥斯汀 and 休斯顿游记.html
+++ b/iphyer.github.io/USA印象6:得克萨斯州——奥斯汀 and 休斯顿游记.html
@@ -6,7 +6,7 @@ date: 2018-01-02 23:55
 comments: true
 categories: 美国生活</h2>
 <h1>前言</h1>
-<p>老同学在亚马逊工作一年后终于买房了，说起来还是码农赚钱。现在在北美的老兄弟，除了那几个家底殷实的同学，完全凭借自己一己之力在北美买房的这是第一个。还是很为同学高兴的。所以在这个麦迪逊史上第二冷的冬天就来了奥斯汀，得克萨斯州。</p>
+<p>老同学在亚马逊工作一年后终于买房了，说起来还是码农赚钱。现在在北美的老兄弟，除了那几个家底殷实的同学，完全凭借自己一己之力在北美买房的这是第一个。还是很为同学高兴的。所以在这个麦迪逊史上第二冷的冬天就来了奥斯汀，德克萨斯州。</p>
 <p>&lt;!--more--&gt;</p>
 <h1>奥斯汀</h1>
 <p>首先说下，城市名称的起源吧。德州的几大城市的名称都是来自历史上的著名人物，比如 奥斯汀就是德州独立和并入美国的关键人物,<a href="https://en.wikipedia.org/wiki/Stephen_F._Austin">Stephen F. Austin</a>。</p>
@@ -42,14 +42,12 @@ categories: 美国生活</h2>
 <p><img alt="street3" src="/media/wwww/share/study/聚聚/源数据/博客聚合/iphyer.github.io/images/Texas/aus5.jpeg"/></p>
 <p><img alt="street5" src="/media/wwww/share/study/聚聚/源数据/博客聚合/iphyer.github.io/images/Texas/aus7.jpeg"/></p>
 <p><img alt="street6" src="/media/wwww/share/study/聚聚/源数据/博客聚合/iphyer.github.io/images/Texas/aus11.jpeg"/></p>
-<p>UT-Austin 的主校园，话说当年 UT-Austion 默默拒绝了我，真是残念。</p>
+<p>UT-Austin 的主校园，话说当年 UT-Austin 默默拒绝了我，真是残念。</p>
 <p><img alt="street7" src="/media/wwww/share/study/聚聚/源数据/博客聚合/iphyer.github.io/images/Texas/2.jpeg"/></p>
 <p>当然还去了，奥斯汀郊区的一个天然湖，风景确实是漂亮。据说湖这边是饭店，可以参观，对面全部是私人别墅。</p>
 <p><img alt="street8" src="/media/wwww/share/study/聚聚/源数据/博客聚合/iphyer.github.io/images/Texas/aus1.jpeg"/></p>
 <p><img alt="street9" src="/media/wwww/share/study/聚聚/源数据/博客聚合/iphyer.github.io/images/Texas/aus2.jpeg"/></p>
 <p><img alt="street10" src="/media/wwww/share/study/聚聚/源数据/博客聚合/iphyer.github.io/images/Texas/aus3.jpeg"/></p>
-<p>另一个让人感受深刻的，就是奥斯汀的环保。</p>
-<p>这个城市是不允许使用塑料袋的。注意是不允许，不是花钱买塑料袋。就是明令禁止。所有的超市都是布袋或者纸箱。没有任何塑料袋。即使德州本身是石油和石油制品的生产大洲。</p>
 <h2>State Capital</h2>
 <p>当然和麦迪逊相似，作为州府，这个城市的核心建筑无庸置疑，必须是州府。所以我们也去参观了州府。说实话，其实州府没啥好参观的，美国各州的州府都和国会山是一个风格，当然具体大小、高度有区别，不过外面看都差不多。</p>
 <p>当然，参观州府的精华不在建筑，在于里面的讲解，往往会解说各个州的历史沿革，著名人物和这座州府的特点。比如威斯康星的州府就会强调，州府用到了这个世界上所有的大理石，里面的两块大理石甚至是从地中海挖出来的。德州这次没有赶上讲解的时间点，我和本科同学们直接跳过了这个讲解。</p>
@@ -67,7 +65,7 @@ categories: 美国生活</h2>
 <p><img alt="state capital2" src="/media/wwww/share/study/聚聚/源数据/博客聚合/iphyer.github.io/images/Texas/mu2.jpeg"/></p>
 <p><img alt="state capital2" src="/media/wwww/share/study/聚聚/源数据/博客聚合/iphyer.github.io/images/Texas/mu3.jpeg"/></p>
 <p><img alt="state capital2" src="/media/wwww/share/study/聚聚/源数据/博客聚合/iphyer.github.io/images/Texas/mu4.jpeg"/></p>
-<p>当然这个时候，就看风流人物了。很多时候，一个伟大的人物在关键的历史节点的伟大闪光，可以彻底地改变历史的进程。想知道更多例子，只要看茨威格的名著《人类群星闪耀时》就可以了，这本书更贴切的名字其实是人类群星开挂时。在得克萨斯州的前途晦暗不明的时候，休斯顿，奥斯汀，达拉斯这些伟大的德州人坚定地选择了独立，选择了美国。甚至在美国本土不愿意接纳德州的情况下，选择独立也要和墨西哥割裂开来，甚至不惜独立建国，独立打赢德墨战争。比如阿拉莫之战，按照现在德州人的观点，“ 英雄的德州儿女冒着墨西哥敌人的弹雨枪林，坚持战斗，绝不放弃，直至弹尽粮绝也没有投降。”</p>
+<p>当然这个时候，就看风流人物了。很多时候，一个伟大的人物在关键的历史节点的伟大闪光，可以彻底地改变历史的进程。想知道更多例子，只要看茨威格的名著《人类群星闪耀时》就可以了，这本书更贴切的名字其实是人类群星开挂时。在德克萨斯州的前途晦暗不明的时候，休斯顿，奥斯汀，达拉斯这些伟大的德州人坚定地选择了独立，选择了美国。甚至在美国本土不愿意接纳德州的情况下，选择独立也要和墨西哥割裂开来，甚至不惜独立建国，独立打赢德墨战争。比如阿拉莫之战，按照现在德州人的观点，“ 英雄的德州儿女冒着墨西哥敌人的弹雨枪林，坚持战斗，绝不放弃，直至弹尽粮绝也没有投降。”</p>
 <p>摘抄一段维基百科的介绍</p>
 <blockquote>
 <p>阿拉莫城中当时的指挥是27岁的威廉·塔拉维斯中校、40岁的冒险家詹姆斯·鲍文和50岁的战争英雄及政治家大卫·克拉克，经过13天伤亡惨重的阿拉莫战役，墨西哥军队终于占领了阿拉莫，所有男性抵抗者均被处死，妇女和儿童得到赦免。</p>
@@ -75,8 +73,8 @@ categories: 美国生活</h2>
 <blockquote>
 <p>三周后，以“记住阿拉莫”（Remember the Alamo!)为战斗口号的德克萨斯军队在山姆·休斯敦的指挥下在圣哈辛托战役取得了决定性的胜利，桑塔·安那也被俘。德克萨斯也因此在之后的几年中保持了独立并在1845年加入美利坚合众国。直到今天，阿拉莫之战依然被视作美国陆军历史上的神话，被美国人认为是自由意志下勇气和牺牲精神的象征，而阿拉莫博物馆每年有多达250万名的参观者。</p>
 </blockquote>
-<p>"Remember the Alamo!"被认为是美国人的精神战斗，就像中国军队强调，平型关战斗，飞夺泸定桥一样都被两国人民作为自己的精神象征。</p>
-<p>当然不得不说的是，作为一个外国人，这是美国人官方史书的说法。在这个激动人心的爱国主义历史教育背景下，美国人从不主动提起的是，支持德州独立的原因。事实上是，从现代的历史观点看，墨西哥采取了更加文明的废奴主义，而德州是落后的蓄奴主义。所以德州不得不从墨西哥独立，不然就必须废奴，这是广大德州农场主所不允许的。</p>
+<p>"Remember the Alamo!"被认为是美国人的战斗精神代表，所谓的军魂之战。就像中国军队强调，平型关战斗，飞夺泸定桥，松骨峰，塔山阻击战，一样都被两国军队作为自己的精神象征。</p>
+<p>当然不得不说的是，以上都是美国人官方史书的说法。在这个激动人心的爱国主义历史教育背景下，美国人从不主动提起的是，支持德州独立的原因。事实上是，从现代主义，进步主义历史观看，墨西哥采取了更加文明的废奴主义，而德州是落后的蓄奴主义。所以德州不得不从墨西哥独立，不然就必须废奴，这是广大德州农场主所不允许的。</p>
 <p>当然，不得不承认，美国人提"Remember the Alamo!"也是有原因的，因为正是墨西哥独裁者安东尼奥·洛佩斯·德·桑塔·安纳在阿拉莫的烧杀抢掠激怒了德州人，这也是休斯顿三周后可以集中力量打赢圣哈辛托战役的原因，也就不奇怪为什么美国人歌颂阿拉莫了。因为这在他们看来是和当年的独立战争一样的逻辑，当然你要是用南北内战的逻辑看是看不通的。</p>
 <p>不过，作为历史教育来说，引述下别人的成熟观点 <a href="https://movie.douban.com/review/4955430/">美国精神的象征：阿拉莫之战</a></p>
 <blockquote>
