--- a/www.cnfeat.com/元认知知识：更迭如潮.html
+++ b/www.cnfeat.com/元认知知识：更迭如潮.html
@@ -8,6 +8,8 @@ blog_post: true</h2>
 <h2>元认知知识</h2>
 <p>认知是个漫长的过程，你在不停的认知过程中总会累积经验，这种经验会帮你更好地认知新知识物种，这一种累积的知识，可以称之为元认知知识。</p>
 <p>元认知知识的意义在于，她的累积是动态的，能够为认知调节提供支撑。</p>
+<p>就像这张图一样</p>
+<p><img alt="" src="https://upload.wikimedia.org/wikipedia/commons/3/34/Impossible_staircase.svg"/></p>
 <p>元认知知识像潮水，一层覆盖过来，沉下去，另一层又覆盖过来，生生不息，永不停止，不停地推动这潮流的前进。</p>
 <h1></h1>
 <p>祝开心</p>
