#I98OGA 去除html文件名中的冒号以避免发布失败

--- a/codeinchinese.com/[意外走向] 大疆机甲大师Python API之八：计时 -- 为性能测试展开1000次循环.html
+++ b/codeinchinese.com/[意外走向] 大疆机甲大师Python API之八：计时 -- 为性能测试展开1000次循环.html
@@ -1,4 +1,4 @@
-<h2>原文：[[意外走向] 大疆机甲大师Python API之八：计时 -- 为性能测试展开1000次循环](http://codeinchinese.com/2019/10/29/【小惊吓】大疆机甲大师Python API之九：整机控制模式.markdown)</h2>
+<h2>原文：[[意外走向] 大疆机甲大师Python API之八：计时 -- 为性能测试展开1000次循环](http://codeinchinese.com/2019/10/28/[意外走向] 大疆机甲大师Python API之八：计时 -- 为性能测试展开1000次循环.markdown)</h2>
 <hr/>
 <h2>layout: post
 comments: true
@@ -6,31 +6,67 @@ title:  "[意外走向] 大疆机甲大师Python API之八：计时 -- 为性能
 description:
 date:   2019-10-28 00:00:00 -0700
 categories: Python 机甲大师</h2>
-<h3>视频演示</h3>
-<p>（友情提示：有背景音请关音箱）</p>
-<p><a href="https://v.qq.com/x/page/o30182mif9i.html">在线视频演示</a></p>
-<p>最后那下有点惊吓，底盘哗啦一下向云台方向看齐。原因看代码先。</p>
-<h3>例程主体</h3>
-<pre><code class="language-python">def start():
-    云台.设置旋转速度(30)
+<p>为机甲的计时API写了如下例程，想对比一下PC上的Python性能（<em><strong>注：作为性能测试非常粗糙，因为主要是想作最简单的演示之用</strong></em>）：</p>
+<pre><code class="language-python">def 开始():
+    工具.计时器(常量.开始)
+    总耗时 = 0
+    次数 = 0
+    while 次数 &lt; 10:
+        算三角函数()
+        工具.计时器(常量.暂停)
+        总耗时 = 工具.累计计时()
+        次数 += 1
+        print(总耗时 / 次数)
 
-    print('no move')
-    云台灯(常量.云台所有, 红色, 常量.效果常亮)
-    大师.设置模式(常量.云台跟随模式)
-    云台.平转(90)
-    时间.睡眠(3)
-
-    print('only gimbal move')
-    云台灯(常量.云台所有, 黄色, 常量.效果走马灯)
-    大师.设置模式(常量.自由模式)
-    云台.平转(90)
-
-    print('both move')
-    云台灯(常量.云台所有, 绿色, 常量.效果闪烁)
-    大师.设置模式(常量.底盘跟随模式)
-    云台.平转(-90)
+def 算三角函数():
+    积 = 1.0
+    for 次数 in range(1, 1000):
+        for 角度 in list(range(1, 360)):
+            弧度 = 数学.弧度(角度)
+            积 *= 数学.正弦(弧度)**2 + 数学.余弦(弧度)**2
+    return 积
 </code></pre>
-<p>在”云台跟随模式“，云台跟随底盘转动，而第一阶段（红灯亮时）并无底盘转动，所以云台平转无效，两者都不转动。</p>
-<p>在”自由模式“，云台和底盘分开转动，因此第二阶段（黄色走马灯时）云台向右转90度，而底盘不动。</p>
-<p>【惊吓】的”底盘跟随模式“设置的时候，云台和底盘朝向并不一致（云台朝右90度），看来这个模式设置时，首先底盘会以最快速度一致朝向，再接着跟着云台继续运动。而角度是相对开机时的状态，因此第三阶段云台从90度转到了-90度，转过了180度。</p>
-<p>发现一个轮胎和轴之间的空隙挺大，也许之前回头看看能紧一紧不。</p>
+<p>因为<a href="https://gist.github.com/apalala/3fbbeb5305584d2abe05">原始代码</a>在PC的运行时间很短，因此当机甲的控制台许久没打出结果的时候，小意外，于是测了求弧度和求平方和两句的分别耗时，结果，竟然瓶颈完全不在这。</p>
+<p>排除法，只剩下了循环体本身（完整源码<a href="https://github.com/program-in-chinese/robomaster-python-samples-zh/blob/master/Python%20API%E8%A7%86%E9%A2%91%E6%BC%94%E7%A4%BA%E4%B8%8E%E4%BE%8B%E7%A8%8B/%E7%B3%BB%E7%BB%9F/%E8%AE%A1%E6%97%B6%E5%99%A8.py">在此</a>）：</p>
+<pre><code class="language-python">def 开始():
+    工具.计时器(常量.开始)
+    for 次数 in range(1, 501):
+        if 次数 % 100 == 0:
+            工具.计时器(常量.暂停)
+            print(str(次数) +": " + str(工具.累计计时()) + " seconds")
+            工具.计时器(常量.开始)
+    工具.计时器(常量.重置)
+</code></pre>
+<p>每100次空循环耗时0.56秒左右！虽然暂没写出实例，但这样的延时感觉会对运动控制算法产生不能忽视的影响。难怪上面的36万次循环会让它貌似宕机。</p>
+<p>补：为避免循环体内的语句的影响，直接用pass，仍然一样，可见瓶颈在for循环：</p>
+<p><a href="https://v.qq.com/x/page/m3018r2wnnv.html">空循环性能测试</a></p>
+<p>试了while循环，也有类似延时。打算报告这个问题。</p>
+<p>对比性能就不干了吗？决定还是继续试试。</p>
+<p>于是，直接将两个循环展开，就是这样的上千行代码：</p>
+<pre><code class="language-python">def 开始():
+    总耗时 = 0
+    工具.计时器(常量.开始)
+
+    结果 *= 算三角函数()
+    （真 -- 此处省去1000行代码）
+    结果 *= 算三角函数()
+
+    工具.计时器(常量.暂停)
+    总耗时 = 工具.累计计时()
+    print(str(总耗时) + " seconds, result : " + str(结果))
+
+def 算三角函数():
+    积 = 1.0
+    弧度 = 数学.弧度(1)
+    积 *= 数学.正弦(弧度)**2 + 数学.余弦(弧度)**2
+    弧度 = 数学.弧度(2)
+    积 *= 数学.正弦(弧度)**2 + 数学.余弦(弧度)**2
+    （真 -- 此处省去700行代码）
+    弧度 = 数学.弧度(358)
+    积 *= 数学.正弦(弧度)**2 + 数学.余弦(弧度)**2
+    弧度 = 数学.弧度(359)
+    积 *= 数学.正弦(弧度)**2 + 数学.余弦(弧度)**2
+    return 积
+</code></pre>
+<p>得出的结果还比较合理，不过也领教了移动计算平台和PC的差别。一方面有计算性能的差距：ARMv7-A Cortex A7 1.5 GHz（参考：<a href="https://forum.dji.com/forum.php?mod=viewthread&amp;tid=198498">RoboMaster CPU and memory</a>）VS. Intel Core i7-2635QM @ 2.00GHz。另外，也许在编译器优化也有区别？</p>
+<p>回头研究一下Python递归，虽然觉得例程里总用递归代替循环不现实。</p>
