--- a/f2h2h1.github.io/关于.html
+++ b/f2h2h1.github.io/关于.html
@@ -27,12 +27,13 @@
 <ul>
 <li>排版也是很花时间</li>
 <li>不必等到一些都准备好时再动笔，有想法就可以动笔记录下来了</li>
-<li>别纠结是不是原创，别纠结前面有没有人写过相同的问题，这是属于自己的笔记，自己的博客，只要是自己觉得有需要就可以记录下来</li>
+<li>别纠结是不是原创，别纠结前面有没有人写过相同的问题，这是属于自己的笔记，只要是自己觉得有需要就可以记录下来</li>
 <li>要时不时回顾一下自己写的笔记<ul>
 <li>往往在回顾的时候会发现一些自己还理解不透彻的地方，然后针对理解不透彻的地方继续学习，继续扩充笔记</li>
 </ul>
 </li>
 <li>经历大量实践后，最后记录下来的可能只有简单的几句话</li>
+<li>我感觉我的数学基础还是太薄弱了，时常都有一种想重学301的冲动</li>
 <li>一直都不喜欢太多的图片，因为图片体积大，而且不好做版本控制，但是一些内容又很难用文字描述，又不得不使用图片</li>
 </ul>
 <blockquote>
