--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 35 个博客、6369 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 35 个博客、6371 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=jasonkayzk.github.io/%E3%80%90%E8%AF%91%E3%80%91%E5%AE%9E%E7%8E%B0%E4%B8%80%E4%B8%AA%E7%AE%80%E5%8D%95%E7%9A%84%E5%86%85%E5%AD%98%E5%88%86%E9%85%8D%E5%99%A8.html>2024-03-22 10:08:01 【译】实现一个简单的内存分配器</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20-%20352%20%E5%90%88%E5%94%B1%E4%B8%8E%E5%86%B0%E7%90%83.html>2024-03-21 14:24:12 新爸五年计划 - 352 合唱与冰球</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202411%20-%202024%20%E9%9A%A7%E9%81%93%E9%A9%AC%E8%AE%AD%E7%BB%83%E7%AC%AC%206%20%E5%91%A8%20%E9%87%8E%E5%BF%83%E8%86%A8%E8%83%80%E5%B0%B1%E8%A6%81%E4%BB%98%E5%87%BA%E4%BB%A3%E4%BB%B7.html>2024-03-20 14:35:18 折返点 2411 - 2024 隧道马训练第 6 周 野心膨胀就要付出代价</a></li>
 
