--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 35 个博客、6371 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 35 个博客、6387 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20-%20353%20%E5%96%89%E5%92%99%E7%9A%84%E5%90%AF%E7%A4%BA.html>2024-03-25 14:17:12 新爸五年计划 - 353 喉咙的启示</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202412%20-%202024%20%E9%9A%A7%E9%81%93%E9%A9%AC%E8%AE%AD%E7%BB%83%E7%AC%AC%207%20%E5%91%A8%20%E8%BF%9B%E5%85%A5%E6%9C%AA%E7%9F%A5.html>2024-03-25 12:31:28 折返点 2412 - 2024 隧道马训练第 7 周 进入未知</a></li>
+
+<li><a href=codeinchinese.com/%E5%AE%A2%E6%88%B7%E5%85%B3%E7%B3%BB%E7%AE%A1%E7%90%86%E5%B9%B3%E5%8F%B0%EF%BC%88CRM%EF%BC%89%E5%88%9D%E8%AF%95%E4%B9%8BMonday.html>2024-03-24 客户关系管理平台（CRM）初试之Monday</a></li>
 
 <li><a href=jasonkayzk.github.io/%E3%80%90%E8%AF%91%E3%80%91%E5%AE%9E%E7%8E%B0%E4%B8%80%E4%B8%AA%E7%AE%80%E5%8D%95%E7%9A%84%E5%86%85%E5%AD%98%E5%88%86%E9%85%8D%E5%99%A8.html>2024-03-22 10:08:01 【译】实现一个简单的内存分配器</a></li>
 
@@ -281,6 +287,8 @@
 
 <li><a href=conge.livingwithfcs.org/72%20%E5%B0%8F%E6%97%B6%E5%8B%98%E7%A0%B4%E8%82%89%E4%BD%93%EF%BC%9A%E6%B8%85%E9%98%B3%E7%9A%84%E6%96%AD%E9%A3%9F%E8%87%AA%E6%88%91%E5%AE%9E%E9%AA%8C%E6%97%A5%E5%BF%97.html>2023-10-27 11:24:00 72 小时勘破肉体：清阳的断食自我实验日志</a></li>
 
+<li><a href=codeinchinese.com/%E4%B8%BA%E4%BB%80%E4%B9%88%E4%B8%AD%E5%9B%BD%E7%9A%84%E5%AD%A9%E5%AD%90%E5%AD%A6%E7%9A%84%E7%9F%A5%E8%AF%86%E6%AF%94%E6%AC%A7%E7%BE%8E%E5%A4%9A%E8%BF%99%E4%B9%88%E5%A4%9A%EF%BC%8C%E4%B8%AD%E5%9B%BD%E6%95%99%E8%82%B2%E5%8D%B4%E6%9C%AA%E8%B6%85%E8%BF%87%E6%AC%A7%E7%BE%8E%EF%BC%9F.html>2023-10-25 为什么中国的孩子学的知识比欧美多这么多，中国教育却未超过欧美？</a></li>
+
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20-%20331%20%E6%BC%94%E5%87%BA%20%E7%94%B5%E5%BD%B1%20%E9%97%BA%E8%9C%9C.html>2023-10-24 12:14:03 新爸五年计划 - 331 演出 电影 闺蜜</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202342%20-%20%E8%AF%95%E8%AF%95%2072%20%E5%B0%8F%E6%97%B6%E8%BD%BB%E6%96%AD%E9%A3%9F.html>2023-10-22 18:28:39 折返点 2342 - 试试 72 小时轻断食</a></li>
@@ -291,7 +299,11 @@
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202341%20-%20%E5%8A%9B%E9%87%8F%E4%BB%8E%E5%93%AA%E9%87%8C%E6%9D%A5.html>2023-10-16 11:45:56 折返点 2341 - 力量从哪里来</a></li>
 
+<li><a href=codeinchinese.com/%E3%80%8C%E5%B0%8F%E3%80%81%E5%88%9D%E3%80%81%E9%AB%98%E7%9A%84%E6%95%99%E6%9D%90%E5%81%9C%E6%BB%9E%E4%B8%8D%E5%89%8D%E3%80%8D%E8%BF%99%E7%A7%8D%E8%AF%B4%E6%B3%95%E5%87%86%E7%A1%AE%E5%90%97%EF%BC%9F%E4%BD%A0%E7%9A%84%E5%88%A4%E6%96%AD%E4%BE%9D%E6%8D%AE%E6%98%AF%E4%BB%80%E4%B9%88%EF%BC%9F.html>2023-10-13 「小、初、高的教材停滞不前」这种说法准确吗？你的判断依据是什么？</a></li>
+
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20-%20329%20%E9%A9%AC%E4%B8%8D%E5%81%9C%E8%B9%84.html>2023-10-11 15:35:20 新爸五年计划 - 329 马不停蹄</a></li>
+
+<li><a href=codeinchinese.com/%E2%80%9C%E5%B8%A6%E5%8D%95%E4%BD%8D%E7%9A%84%E6%95%B0%E5%80%BC%E2%80%9D%E5%81%9A%E4%B8%BA%E4%B8%80%E7%A7%8D%E6%95%B0%E6%8D%AE%E7%B1%BB%E5%9E%8B%EF%BC%88%E7%89%B9%E5%88%AB%E6%98%AF%E5%9C%A8%E4%B8%AD%E6%96%87%E7%BC%96%E7%A8%8B%E8%AF%AD%E8%A8%80%E4%B8%AD%EF%BC%89%EF%BC%8C%E7%AE%97%E4%B8%8D%E7%AE%97%E6%98%AF%E5%A5%BD%E7%9A%84%E8%AF%AD%E8%A8%80%E7%89%B9%E6%80%A7%EF%BC%9F.html>2023-10-11 “带单位的数值”做为一种数据类型（特别是在中文编程语言中），算不算是好的语言特性？</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202340%20-%20Move-a-Thon.html>2023-10-09 13:09:56 折返点 2340 - Move-a-Thon</a></li>
 
@@ -329,6 +341,8 @@
 
 <li><a href=shiina18.github.io/GPT%20%E5%BE%AE%E8%B0%83%E6%8C%87%E5%8D%97%E8%A6%81%E7%82%B9.html>2023-09-19 GPT 微调指南要点</a></li>
 
+<li><a href=codeinchinese.com/%E4%BB%A3%E7%A0%81%E5%BE%88%E5%A4%8D%E6%9D%82%EF%BC%8C%E5%90%84%E7%A7%8D%E5%90%84%E6%A0%B7%E7%9A%84%E9%94%99%E8%AF%AF%E9%83%BD%E6%9C%89%E5%8F%AF%E8%83%BD%EF%BC%8C%E4%BB%A3%E7%A0%81%E7%BC%96%E8%BE%91%E5%99%A8%E6%80%8E%E4%B9%88%E6%A0%B7%E6%89%8D%E8%83%BD%E5%81%9A%E5%88%B0%E5%85%A8%E9%9D%A2%E6%B5%8B%E8%AF%95%EF%BC%9F.html>2023-09-18 代码很复杂，各种各样的错误都有可能，代码编辑器怎么样才能做到全面测试？</a></li>
+
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202336%20-%20%E4%BC%A4%E5%8F%A3%E5%A4%84%E7%90%86.html>2023-09-14 12:11:08 折返点 2336 - 伤口处理</a></li>
 
 <li><a href=www.barretlee.com/%E6%B5%B7%E5%A4%96%20App%20Store%20%E8%B4%A6%E5%8F%B7%E5%92%8C%E7%A4%BC%E5%93%81%E5%8D%A1.html>2023-09-14 09:11:01 海外 App Store 账号和礼品卡</a></li>
@@ -363,6 +377,8 @@
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202335%20-%20%E4%BF%AE%E5%A4%8D%E8%B7%91%E6%AD%A5%E9%A1%B5%E9%9D%A2%E7%9A%84%E6%95%85%E9%9A%9C.html>2023-09-05 10:49:31 折返点 2335 - 修复跑步页面的故障</a></li>
 
+<li><a href=codeinchinese.com/%E4%B8%BA%E4%BB%80%E4%B9%88%E4%B8%8D%E5%8F%AF%E5%A4%A7%E5%BC%A0%E6%97%97%E9%BC%93%E5%9C%B0%E6%8E%A8%E5%8A%A8%E2%80%9C%E6%B1%89%E5%AD%97%E7%BC%96%E7%A8%8B%E2%80%9D%EF%BC%9F.html>2023-09-02 为什么不可大张旗鼓地推动“汉字编程”？</a></li>
+
 <li><a href=shiina18.github.io/%E7%A5%9E%E7%BB%8F%E7%BD%91%E7%BB%9C%E5%8F%AF%E8%A7%A3%E9%87%8A%E6%80%A7%E5%87%A0%E5%88%99%2C%20%E4%BB%A5%20TrustAI%20%E4%B8%BA%E4%BE%8B.html>2023-09-01 神经网络可解释性几则, 以 TrustAI 为例</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20-%20323%20%E5%9C%A8%E5%90%8E%E9%99%A2%E5%84%BF%E6%90%AD%E5%B8%90%E7%AF%B7.html>2023-08-28 18:02:01 新爸五年计划 - 323 在后院儿搭帐篷</a></li>
@@ -370,6 +386,8 @@
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202334%20-%20%E7%83%9F%E9%9B%BE%E7%9A%84%E4%B8%80%E5%91%A8%20.html>2023-08-28 10:21:24 折返点 2334 - 烟雾的一周 </a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202333%20%7C%20%E7%BA%BD%E7%BA%A6%E5%8D%B0%E8%B1%A1%20.html>2023-08-24 10:21:24 折返点 2333 | 纽约印象 </a></li>
+
+<li><a href=codeinchinese.com/%E6%B1%89%E8%AF%AD%E8%AF%AD%E6%B3%95%E7%A0%94%E7%A9%B6%E7%9A%84%E6%84%8F%E4%B9%89%E6%98%AF%E4%BB%80%E4%B9%88%EF%BC%9F.html>2023-08-23 汉语语法研究的意义是什么？</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20-%20322%20%E5%B7%B4%E8%A5%BF%E6%9F%94%E6%9C%AF%E5%A4%8F%E4%BB%A4%E8%90%A5.html>2023-08-20 17:36:50 新爸五年计划 - 322 巴西柔术夏令营</a></li>
 
@@ -379,6 +397,14 @@
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202332%20%7C%20FCS%20%E5%9F%BA%E9%87%91%E4%BC%9A%20%E7%BA%BF%E4%B8%8A%E4%BA%94%E5%85%AC%E9%87%8C%E4%B9%89%E8%B7%91%20.html>2023-08-14 12:23:38 折返点 2332 | FCS 基金会 线上五公里义跑 </a></li>
 
+<li><a href=codeinchinese.com/%E6%B1%89%E5%AD%97%E7%9A%84%E9%83%A8%E4%BB%B6%E6%80%8E%E4%B9%88%E6%89%93%EF%BC%9F.html>2023-08-12 汉字的部件怎么打？</a></li>
+
+<li><a href=codeinchinese.com/%E4%B8%BA%E4%BB%80%E4%B9%88%E6%B2%A1%E6%9C%89%E4%B8%80%E4%B8%AA%E5%A4%A7%E5%85%AC%E5%8F%B8%E5%9E%84%E6%96%AD%E7%BC%96%E7%A8%8B%E8%AF%AD%E8%A8%80%EF%BC%9F.html>2023-08-10 为什么没有一个大公司垄断编程语言？</a></li>
+
+<li><a href=codeinchinese.com/%E4%B8%BA%E4%BB%80%E4%B9%88%E5%9C%88%E5%A4%96%E4%BA%BA%E5%A6%82%E6%AD%A4%E6%89%A7%E7%9D%80%E4%B8%AD%E6%96%87%EF%BC%88%E5%85%B3%E9%94%AE%E5%AD%97%EF%BC%89%E7%BC%96%E7%A8%8B%EF%BC%9F.html>2023-08-09 为什么圈外人如此执着中文（关键字）编程？</a></li>
+
+<li><a href=codeinchinese.com/%E7%8E%B0%E5%9C%A8%E6%B5%81%E8%A1%8C%E7%9A%84%E5%B0%91%E5%84%BF%E7%BC%96%E7%A8%8B%E6%98%AF%E4%B8%8D%E6%98%AF%E6%94%B6%E6%99%BA%E5%95%86%E7%A8%8E%EF%BC%9F.html>2023-08-08 现在流行的少儿编程是不是收智商税？</a></li>
+
 <li><a href=conge.livingwithfcs.org/2023%20%E4%B8%83%E6%9C%88%E8%AF%BB%E6%B0%91%E6%97%8F%E5%AD%A6%EF%BC%8C%E6%94%BF%E6%B2%BB%EF%BC%8C%E5%A5%A5%E6%96%AF%E7%BB%B4%E8%BE%9B%EF%BC%8C%E6%B8%85%E9%86%92%E6%A2%A6%EF%BC%8C%E5%86%99%E4%BD%9C%E2%80%A6%E2%80%A614%20%E6%9C%AC.html>2023-08-07 23:51:19 2023 七月读民族学，政治，奥斯维辛，清醒梦，写作……14 本</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20-%20320%20Kalaloch%20Beach%20campground%20%E9%9C%B2%E8%90%A5.html>2023-08-07 13:56:52 新爸五年计划 - 320 Kalaloch Beach campground 露营</a></li>
@@ -387,11 +413,17 @@
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202331%20%7C%20%E8%B5%A4%E8%84%9A%E6%95%A3%E6%AD%A5.html>2023-08-06 11:01:20 折返点 2331 | 赤脚散步</a></li>
 
+<li><a href=codeinchinese.com/%E4%B8%BA%E4%BB%80%E4%B9%88%E5%A4%A7%E5%AE%B6%E5%AF%B9%E4%B8%AD%E6%96%87%E5%8F%98%E9%87%8F%E7%BC%96%E7%A8%8B%E5%A6%82%E6%AD%A4%E4%B8%8D%E5%B1%91%E5%B9%B6%E4%B8%94%E5%86%B7%E5%98%B2%E7%83%AD%E8%AE%BD%EF%BC%9F.html>2023-08-05 为什么大家对中文变量编程如此不屑并且冷嘲热讽？</a></li>
+
+<li><a href=codeinchinese.com/%E4%BB%85%E4%BB%85%E4%BB%8E%E5%A5%BD%E7%8E%A9%E7%A8%8B%E5%BA%A6%E8%80%83%E8%99%91%EF%BC%8C%E5%81%9A%E7%BC%96%E8%AF%91%E5%99%A8%E6%88%96%E6%93%8D%E4%BD%9C%E7%B3%BB%E7%BB%9F%E5%93%AA%E4%B8%AA%E6%9B%B4%E6%9C%89%E8%B6%A3%E5%91%B3%EF%BC%9F.html>2023-08-04 仅仅从好玩程度考虑，做编译器或操作系统哪个更有趣味？</a></li>
+
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20%7C%20319%20%E5%AD%A9%E5%AD%90%E6%9A%91%E5%81%87%E5%8F%82%E5%8A%A0%E7%9A%84%E5%A4%8F%E4%BB%A4%E8%90%A5%E4%BB%AC.html>2023-08-03 13:56:52 新爸五年计划 | 319 孩子暑假参加的夏令营们</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202330%20%7C%20%E5%B0%8F%E5%BF%83%E5%8F%97%E4%BC%A4.html>2023-08-01 17:12:28 折返点 2330 | 小心受伤</a></li>
 
 <li><a href=mabbs.github.io/%E5%A6%82%E4%BD%95%E8%AE%A9Python%E8%84%9A%E6%9C%AC%E6%8E%A5%E6%94%B6OAuth2.0%E7%9A%84Code%EF%BC%9F.html>2023-08-01 如何让Python脚本接收OAuth2.0的Code？</a></li>
+
+<li><a href=codeinchinese.com/%E5%81%87%E5%A6%82%E8%AE%A1%E7%AE%97%E6%9C%BA%E6%8A%80%E6%9C%AF%E8%B5%B7%E6%BA%90%E4%BA%8E%E4%B8%AD%E5%9B%BD%EF%BC%8C%E9%82%A3%E7%BC%96%E7%A8%8B%E8%AF%AD%E8%A8%80%E4%BC%9A%E6%98%AF%E4%BB%80%E4%B9%88%E6%A0%B7%E7%9A%84%3F.html>2023-08-01 假如计算机技术起源于中国，那编程语言会是什么样的?</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E3%80%8A%E5%8D%8E%E5%A4%8F%E8%BE%B9%E7%BC%98%E3%80%8B%E8%AF%BB%E5%90%8E%E6%84%9F.html>2023-07-28 05:08:13 《华夏边缘》读后感</a></li>
 
