--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 42 个博客、7353 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 42 个博客、7356 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=jerkwin.github.io/%E5%8F%8D%E5%BA%94%E9%80%94%E5%BE%84%E7%9A%84%E6%B5%8B%E5%9C%B0%E6%8F%92%E5%80%BC%E7%AE%97%E6%B3%95.html>2024-04-02 反应途径的测地插值算法</a></li>
+
+<li><a href=kexizeroing.github.io/JavaScript%20prototype%20chain%2C%20Class%20and%20Proxy.html>2024-04-02 JavaScript prototype chain, Class and Proxy</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202413%20-%202024%20%E9%9A%A7%E9%81%93%E9%A9%AC%E8%AE%AD%E7%BB%83%E7%AC%AC%208%20%E5%91%A8%20%E6%92%9E%E5%A2%99%EF%BC%9F.html>2024-04-01 15:08:28 折返点 2413 - 2024 隧道马训练第 8 周 撞墙？</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20-%20354%20%E6%B9%BF%E7%96%B9.html>2024-04-01 10:59:36 新爸五年计划 - 354 湿疹</a></li>
 
 <li><a href=blog.mauve.icu/Codeforces%20Round%20923%20%28Div.%203%29.html>2024-03-31 20:27:55 Codeforces Round 923 (Div. 3)</a></li>
 
@@ -76,8 +84,6 @@
 <li><a href=blog.mauve.icu/%E4%B8%AA%E4%BA%BA%E5%A4%87%E4%BB%BD%E7%9A%84%E5%B8%B8%E7%94%A8%20macOS%20%E6%B8%85%E7%90%86%E5%91%BD%E4%BB%A4.html>2024-03-02 01:10:37 个人备份的常用 macOS 清理命令</a></li>
 
 <li><a href=kexizeroing.github.io/HTTP%20cookies%20explained%20and%20security%20policy.html>2024-03-02 HTTP cookies explained and security policy</a></li>
-
-<li><a href=kexizeroing.github.io/JavaScript%20prototype%20chain%20and%20class.html>2024-03-02 JavaScript prototype chain and class</a></li>
 
 <li><a href=codeinchinese.com/%E5%9C%A8%E5%9B%BD%E4%BA%A7%E5%8C%96%E7%BC%96%E8%AF%91%E5%99%A8%E7%9A%84%E5%8F%91%E5%B1%95%E8%BF%87%E7%A8%8B%E4%B8%AD%E9%81%87%E5%88%B0%E8%BF%87%E5%93%AA%E4%BA%9B%E6%8C%91%E6%88%98%EF%BC%9F.html>2024-03-01 在国产化编译器的发展过程中遇到过哪些挑战？</a></li>
 
