--- a/babyno.top/Archive.html
+++ b/babyno.top/Archive.html
@@ -1,6 +1,6 @@
-<h2>原文：<a href="https://babyno.top/posts/archive">Archive</a></h2>
+<h2>原文：<a href="https://babyno.top/posts/archive.en">Archive</a></h2>
 <hr/>
 <p>title: "Archive"
 layout: "archives"</p>
-<h1>url: "/archives"</h1>
+<h1>url: "archives"</h1>
 <h2>summary: "archives"</h2>
