--- a/index.html
+++ b/index.html
@@ -6,12 +6,26 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 45 个博客、8011 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 45 个博客、8018 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=sakurawald.github.io/good%20application%20set.html>2024-04-08 14:57:18 good application set</a></li>
+
+<li><a href=jerkwin.github.io/trr%E8%BD%A8%E8%BF%B9%E8%BD%AC%E6%8D%A2%E7%A8%8B%E5%BA%8Ftrr2all.html>2024-04-08 trr轨迹转换程序trr2all</a></li>
+
+<li><a href=gitee.com/Kenneth-Lee-2012/MySummary/6.7.html>2024-04-08 6.7</a></li>
+
+<li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E5%85%B3%E4%BA%8E%E8%AF%AD%E4%B9%89%E7%9A%84%E8%BE%A8%E8%AF%86.html>2024-04-08 关于语义的辨识</a></li>
+
+<li><a href=sakurawald.github.io/launch%20tor%20browser%20without%20tor%20network.html>2024-04-07 04:28:32 launch tor browser without tor network</a></li>
+
+<li><a href=blog.mauve.icu/Codeforces%20Round%20925%20%28Div.%203%29.html>2024-04-06 14:44:35 Codeforces Round 925 (Div. 3)</a></li>
+
+<li><a href=mabbs.github.io/%E5%85%B3%E4%BA%8E%E6%97%A7%E7%94%B5%E8%84%91%E7%9A%84%E4%BD%BF%E7%94%A8%E6%8E%A2%E7%B4%A2.html>2024-04-06 关于旧电脑的使用探索</a></li>
 
 <li><a href=blog.mauve.icu/Codeforces%20Round%20924%20%28Div.%202%29.html>2024-04-05 21:01:16 Codeforces Round 924 (Div. 2)</a></li>
 
