--- a/babyno.top/Search.html
+++ b/babyno.top/Search.html
@@ -1,4 +1,4 @@
-<h2>原文：<a href="https://babyno.top/posts/search">Search</a></h2>
+<h2>原文：<a href="https://babyno.top/posts/search.en">Search</a></h2>
 <hr/>
 <h2>title: "Search"
 layout: "search"
