重新生成，有部分内容修改

--- a/gitee.com/Kenneth-Lee-2012/MySummary/python工程的原理.html
+++ b/gitee.com/Kenneth-Lee-2012/MySummary/python工程的原理.html
@@ -1,8 +1,8 @@
 <h2>原文：<a href="https://gitee.com/Kenneth-Lee-2012/MySummary/blob/master/%E8%8A%B1%E6%9C%B5%E7%9A%84%E6%B8%A9%E5%AE%A4/python%E5%B7%A5%E7%A8%8B%E7%9A%84%E5%8E%9F%E7%90%86.rst">python工程的原理</a></h2>
 <p>.. Kenneth Lee 版权所有 2024</p>
 <p>:Authors: Kenneth Lee
-:Version: 0.1
-:Date: 2024-03-30
+:Version: 0.2
+:Date: 2024-04-07
 :Status: Released</p>
 <p>python工程的原理</p>
 <hr/>
@@ -11,11 +11,12 @@
 代码，然后让硬件执行执行的。它是靠运行在硬件上的一个“解释器”（又称为VM），一句
 句读进你的指令，然后一句句执行的。</p>
 <p>换句话说，你用C写一个程序，这个程序编译成一个机器代码（本地程序），然后这个本
-地程序就和你原来的C代码没有什么关系了，它可以在你的机器上直接运行和编译器已经
-没有什么关系了，你用这个程序的时候不需要编译器。</p>
+地程序就和你原来的C代码没有什么关系了，它是一个可以直接在你的机器上直接运行的
+机器代码组成的程序，它运行的时候不需要编译器在，因为它里面已经没有C的代码了，
+只有机器代码。</p>
 <p>而Python自己是一个本地程序，它用自己的源代码（很多都是C写的）编译出来的，编译
-出来以后的VM可以解释你输进来的每个Python指令，所以你写的Python程序不能直接在运
-行的，它是用Python这个本地程序解释后，让Python这个程序（VM）执行的。</p>
+出来以后的VM可以解释你输进来的每个Python指令，所以你写的Python程序不能直接运行
+的，它是用Python这个本地程序解释后，让Python这个程序（VM）执行的。</p>
 <p>所以Python本身是一个本地程序，不同版本的Python是不同的程序，你可以在一个机器上
 装很多个Python的，只要它们使用不同的路径，那就是不同的Python。</p>
 <p>但一个Python（VM）的二进制程序，其实比我们平时练习写的C/C++程序复杂一些，它不
@@ -67,7 +68,7 @@ ii  python3-numpy 1:1.24.2-1 amd64 Fast array facility to the Python 3 language<
 /usr/lib/python3/dist-packages/numpy/_distributor_init.py
 /usr/lib/python3/dist-packages/numpy/_globals.py
 /usr/lib/python3/dist-packages/numpy/...</p>
-<h1>这配合有C的程序</h1>
+<h1>这配套有C的程序</h1>
 <p>/usr/lib/python3/dist-packages/numpy/distutils/checks/cpu_asimd.c
 /usr/lib/python3/dist-packages/numpy/distutils/checks/cpu_asimddp.c
 /usr/lib/python3/dist-packages/numpy/distutils/checks/cpu_asimdfhm.c
@@ -97,11 +98,11 @@ C函数而已。</p>
 个python程序会记住它要到什么目录中去找这个库，而这个库如果不是装在这个目录中，
 它同样会认为没有的。</p>
 <p>理解这两点，我们就还可以注意到另外两点。第一，我们前面说了，Python是解释型语言，
-所以，它的代码是python这个程序解释执行的，所以，它理论上可以跨平台，不同的机器，
-无论它的底层汇编语言是ARM的还是x86的，都可以解释一样的Python语言。但我们看到这
-里numpy里面其实是包含了C的，所以，如果你用的是numpy这个库，这个库是不跨平台的。
-x86的numpy就只能用在x86上，ARM的numpy就只能用在ARM上。所以，这种库必须和
-python VM这个二进制一样，要找到正确的平台版本才能用。</p>
+它的代码是python这个程序解释执行的，所以，它理论上可以跨平台，不同的机器，无论
+它的底层汇编语言是ARM的还是x86的，都可以解释一样的Python语言。但我们看到这里
+numpy里面其实是包含了C的，所以，如果你用的是numpy这个库，这个库是不跨平台的。
+x86的numpy就只能用在x86上，ARM的numpy就只能用在ARM上。所以，这种库必须和python
+VM这个二进制一样，要找到正确的平台版本才能用。</p>
 <p>第二个问题。我不知道你注意到没有，我们一开始看Python二进制在哪里的时候，我们发
 现它叫Python3.11，你其实还可以安装Python3.10，Python3.9，甚至Python2.12这样的
 不同版本的python。但后面我们看numpy的时候，它的目录叫Python3，而不叫Python3.11。</p>
@@ -110,7 +111,7 @@ python VM这个二进制一样，要找到正确的平台版本才能用。</p>
 们称为“版本兼容性”。所有Python3目录下的numpy，都和Python3.xx兼容，但它们不和
 Python2.xx兼容（两者其实语法都不完全一样）。所以你可以选择不同的Python3.xx版本，
 但都可以用同一个numpy。</p>
-<p>从这里就可以看到了，版本兼容是意见很麻烦的事情。比如Python2可以写这种语法：</p>
+<p>从这里就可以看到了，版本兼容是一件很麻烦的事情。比如Python2可以写这种语法：</p>
 <p>.. code:: python</p>
 <p>print "hello world"</p>
 <p>但在Python3里面这是错误的，Python3里面你要打印，你只能这样写：</p>
@@ -250,20 +251,23 @@ cmd&gt; python -m venv myvenv</p>
 可以看出，这是个商业公司，所以它默认给你的安装程序是anaconda，但它也提供
 miniconda，这是一个没有那么多商业特性的版本，我们尽量用这个，方案比较独立，毕
 竟我们需要的是基本的功能。</p>
-<p>安装这个Python前，尽量删掉Windows默认的那个，省得以后不知道自己用的是哪个，或
-者造成互相影响。miniconda默认安装是不修改PATH环境变量的，所以你在命令行中是运
-行不了python的，要在windows菜单上找miniconda设置过的命令行运行。你当然可以把
-miniconda加到你的路径中，但这样很容易导致其他程序误用这个版本的Python，所以推
-荐是不要设置这个路径，但这样vscode的Python插件就需要修改一下才能用这个Python了。</p>
-<p>miniconda的最大特点是默认就带了venv这个方案。你从菜单上启动一个miniconda的
+<p>miniconda默认安装是不修改PATH环境变量的，所以你在命令行中是运行不了python的，
+要在windows菜单上找miniconda设置过的命令行运行。你当然可以把miniconda加到你的
+路径中，但这样很容易导致其他程序误用这个版本的Python，所以推荐是不要设置这个路
+径，但这样vscode的Python插件就需要修改一下配置才能用这个Python了。</p>
+<p>miniconda的最大特点是默认就带了类似venv这个方案。你从菜单上启动一个miniconda的
 Python，它默认就有一个叫base的虚拟环境，你随时可以用conda create -n myvenv来创
 建新的目录，然后如下方法激活和反激活它：::</p>
 <p>conda activate myvenv
 conda deactivate myvenv</p>
-<p>其他用法就和前面的venv是一样的了。</p>
-<p>这个很麻烦吧，对这种麻烦有切身的认识，就开始理解软件是个什么工作了。</p>
+<p>其他用法就和前面的venv是一样的了。conda每个沙箱里面就带着python.exe这个命令，
+如果你用于vscode，你可以直接修改python的配置，把路径设置上这个路径上就可以了。
+（其实我个人更建议直接用命令行。）</p>
+<p>miniconda很流行，所以不用担心这个方案不通用，在MacOS或者Linux下也可以装，只是
+在Linux下通常我们不需要装，因为venv已经够用了。</p>
+<p>无论如何，这个很麻烦吧，对这种麻烦有切身的认识，就开始理解软件是个什么工作了。</p>
 <h1>Python的库到底是什么</h1>
-<p>我们再介绍一下python的库到底是各什么东西，我们写一个程序：</p>
+<p>我们再介绍一下python的库到底是个什么东西，我们写一个程序：</p>
 <p>.. code:: python</p>
 <h1>test1.py</h1>
 <p>def add(a, b):
