--- a/kexizeroing.github.io/Debugging CSS.html
+++ b/kexizeroing.github.io/Debugging CSS.html
@@ -54,11 +54,9 @@ for (let i = 0; i &lt; all.length; i++) {
 </li>
 <li><p>A long word or link can easily cause horizontal overflow (scrolling). The solution is to use <code>overflow-wrap: break-word</code>. It’s worth mentioning that the property has been renamed from <code>word-wrap</code> to <code>overflow-wrap</code>.</p>
 </li>
-<li><p>For <code>text-overflow: ellipsis</code> to work, the element’s <code>display</code> type should be set to <code>block</code> and the element must have the <code>overflow: hidden</code> and <code>white-space: nowrap</code> set.</p>
-</li>
 <li><p>Flexbox doesn’t wrap by default, thus may cause horizontal scrolling. Always make sure to add <code>flex-wrap: wrap</code>. By default, flexbox stretch its child items to make them equal in height if the direction is set to <code>row</code>, and it makes them equal in width if the direction is set to <code>column</code>.</p>
 </li>
-<li><p>Each flex item has a <code>flex-basis</code> property, which acts as the sizing property for that item. When the value is <code>flex-basis: auto</code>, the basis is the content’s size. With <code>.item { flex-grow: 1; flex-basis: 0%; }</code>, each child item will take up the same space as its siblings.</p>
+<li><p>Each flex item has a <code>flex-basis</code> property, which acts as the sizing property for that item. When the value is <code>flex-basis: auto</code>, the basis is the content’s size. With <code>.item { flex-grow: 1; flex-basis: 0%; }</code>, each child item will take up the same space as its siblings. <code>flex: 1</code> is equivalent to <code>flex: 1 1 0</code>.</p>
 </li>
 <li><p>While the default <code>min-width</code> value is 0 (zero), for flex items it is <code>auto</code>. This can make block elements take up much more space than desired, resulting in overflow. The solution is to add <code>min-width: 0;</code> to the flex item.</p>
 </li>
