--- a/kexizeroing.github.io/Frontend interview questions.html
+++ b/kexizeroing.github.io/Frontend interview questions.html
@@ -7,10 +7,10 @@ description: ""
 added: ""
 top: true
 order: 5
-updatedDate: "Feb 09 2023"</h2>
+updatedDate: "Apr 7 2024"</h2>
 <p>更全面的准备可以参考:</p>
 <ul>
-<li>https://febook.hzfe.org/awesome-interview</li>
+<li>https://hzfe.github.io/awesome-interview</li>
 <li>https://github.com/Sunny-117/js-challenges</li>
 <li>https://github.com/lydiahallie/advanced-web-dev-quiz</li>
 </ul>
@@ -68,7 +68,45 @@ concurrencyRequest(urls, 3).then(res =&gt; {
   console.log(res);
 })
 </code></pre>
-<ol>
+<ol start="2">
+<li>Implement <code>Promise.all</code> by yourself.</li>
+</ol>
+<pre><code class="language-js">Promise._all = function (promises) {
+  return new Promise((resolve, reject) =&gt; {
+    let counter = 0;
+    const result = [];
+    for (let i = 0; i &lt; promises.length; i++) {
+      // Use `Promise.resolve(promises[i])` instead of `promises[i].then()`, 
+      // because `promises[i]` could be a non-promise so it won’t have `.then()` method
+      Promise.resolve(promises[i]).then(res =&gt; {
+        result[i] = res;
+        counter += 1;
+        if (counter === promises.length) {
+          resolve(result);
+        }
+      }, err =&gt; {
+        reject(err);
+      });
+    }
+  });
+};
+
+// Also implement `Promise.resolve` and `Promise.reject`
+Promise._resolve = function (value) {
+  if (value instanceof Promise) {
+    return value;
+  } else {
+    return new Promise((resolve, reject) =&gt; {
+      resolve(value);
+    });
+  }
+};
+
+Promise._reject = function (reason) {
+  return new Promise((resolve, reject) =&gt; reject(reason));
+}
+</code></pre>
+<ol start="3">
 <li>Implement calling click event listener only once without using <code>{once: true}</code>.</li>
 </ol>
 <pre><code class="language-js">function clickOnce(el, cb) {
@@ -81,7 +119,7 @@ concurrencyRequest(urls, 3).then(res =&gt; {
 
 clickOnce($0, () =&gt; console.log('click'));
 </code></pre>
-<ol start="3">
+<ol start="4">
 <li>Use setTimeout to invoke a function multiple times in the fixed interval.</li>
 </ol>
 <pre><code class="language-js">function repeat(func, times, ms, immediate) {
@@ -107,4 +145,35 @@ clickOnce($0, () =&gt; console.log('click'));
 // test
 const repeatFunc = repeat(console.log, 4, 3000, true);
 repeatFunc("hello"); 
+</code></pre>
+<ol start="5">
+<li>Implement the render function to convert the virtual dom JSON to real DOM.</li>
+</ol>
+<pre><code class="language-js">function render(vnode) {
+  const { tag, props, children } = vnode;
+  const el = document.createElement(tag);
+
+  if (props) {
+    for (const key in props) {
+      const value = props[key];
+      if (key.startsWith("on")) {
+        el.addEventListener(key.slice(2).toLowerCase(), value);
+      } else {
+        el.setAttribute(key, value);
+      }
+    }
+  }
+
+  if (children) {
+    if (typeof children === "string") {
+      el.textContent = children;
+    } else {
+      children.forEach((item) =&gt; {
+        el.appendChild(render(item));
+      });
+    }
+  }
+
+  return el;
+}
 </code></pre>
