--- a/kexizeroing.github.io/Git knowledge that not clear to me.html
+++ b/kexizeroing.github.io/Git knowledge that not clear to me.html
@@ -172,8 +172,13 @@ When your branches diverge, you have to create a commit to "join" the two branch
 <li><code>git commit --amend --reset-author --no-edit</code> and <code>git rebase --continue</code> to confirm and continue your rebase.</li>
 <li><code>git push --force-with-lease</code> to overwrite the remote history. (<strong><code>--force-with-lease</code> is safer than <code>--force</code></strong>: If a change that someone else made to the remote branch while you were working on your code, you will not overwrite any remote code.)</li>
 </ol>
-<p>Another example, I want to squash my last 3 commits together into one commit: <code>git reset --soft HEAD~3 &amp;&amp; git commit</code>. The soft reset just re-points HEAD to the last commit that you do not want to squash. Neither the index nor the working tree are touched, leaving the index in the desired state for your new commit.</p>
-<p>You also can squash all commits from a branch into one commit by <code>git merge --squash &lt;branch&gt;</code>.</p>
+<p>Another example, I want to squash my last 3 commits together into one commit.</p>
+<ul>
+<li><p>Method 1: <code>git reset --soft HEAD~3 &amp;&amp; git commit</code>. The soft reset just re-points HEAD to the last commit that you do not want to squash. Neither the index nor the working tree are touched, leaving the index in the desired state for your new commit.</p>
+</li>
+<li><p>Method 2: <code>git reset --hard HEAD~3</code>, where <code>HEAD@{1}</code> is where the branch was just before the reset command. Then <code>git merge --squash HEAD@{1} &amp;&amp; git commit</code>. This way you get the commit message prepopulated with every commit message that you're squashing.</p>
+</li>
+</ul>
 <h2>git restore and git switch</h2>
 <p><code>git checkout</code> is one of the many reasons why newcomers find git confusing, and that is because its effect is context-dependent. In version 2.23 of git, two new commands have been introduced to split the old <code>git checkout</code> in two.</p>
 <p><code>git restore</code> implements the behavior of <code>git checkout</code> when running it against a file, <code>git restore -- test.txt</code>.</p>
