--- a/gitee.com/Kenneth-Lee-2012/MySummary/6.4.html
+++ b/gitee.com/Kenneth-Lee-2012/MySummary/6.4.html
@@ -26,16 +26,32 @@ ARM的Top-Byte ignore或者PAuth特性，19年AMD也有一个upper address ignor
 <p>这个版本开始，可以在用户态放tracepoint了。接口是
 ioctl(/sys/kernel/tracing/user_events_data, user_reg)。</p>
 <h2>两个Scalable并行优化</h2>
-<p>todo：per-VM lock和更多的切换锁</p>
+<ol>
+<li><p>增加per-VMA的lock，在部分场景取代mm_struct的全局mmap_lock，提升Scalability。
+Oracle，Google等多个组织提供的补丁。现在是和原来的功能共存的，通过
+CONFIG_PER_VMA_LOCK配置项激活。</p>
+</li>
+<li><p>优化了调度算法，使用户和内核线程的切换在大型系统上有更高的Scalability。特性
+的名字叫CONFIG_MMU_LAZY_TLB_REFCOUNT，大致的意思是如果内核线程在很多CPU上都
+用，就尽量留着相关的TLB项，不要刷掉，从而保证用户进程切换不要动这部分TLB。
+我原来比较好奇的是：这不是本来就是这样的吗？但考虑到部分平台内核和用户态用
+同一个页表指针，也许进程退出的时候，要更新一下TLB，这也大概可以理解。这个等
+要用的时候再来看吧。</p>
+</li>
+</ol>
 <h1>其他有趣的东西</h1>
 <ol>
 <li><p>PSI（Pressure Stall Information）支持用户态访问</p>
 </li>
-<li><p>todo：更安全的KSM接口（原来用madvice）</p>
+<li><p>支持更安全的KSM（Kernel Same-page Merge）接口，原来只有
+madvice(MADV_MERGEABLE)接口，只能以进程内的地址空间为分割，现在加上了
+prctl(PR_SET/GET_MEMORY_MERGE)接口。</p>
 </li>
-<li><p>todo：新BPF特性</p>
+<li><p>BPF特性继续加新特性，但我不关心。</p>
 </li>
-<li><p>todo：关闭动态关闭SELinux的功能</p>
+<li><p>关闭动态关闭SELinux的功能的功能，这是为安全加的小修改。</p>
+</li>
+<li><p>rust一直在增加基础binding。</p>
 </li>
 </ol>
 <h1>华为和海思的提交</h1>
