测试合并，同步完成

--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 45 个博客、8018 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 45 个博客、8020 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=sakurawald.github.io/pin%20refresh%20rate%20of%20an%20android%20phone.html>2024-04-09 19:19:12 pin refresh rate of an android phone</a></li>
+
+<li><a href=gitee.com/Kenneth-Lee-2012/MySummary/6.6.html>2024-04-09 6.6</a></li>
 
 <li><a href=sakurawald.github.io/good%20application%20set.html>2024-04-08 14:57:18 good application set</a></li>
 
