修原文链接：sakurawald.github.io

--- a/sakurawald.github.io/[Database] Design.html
+++ b/sakurawald.github.io/[Database] Design.html
@@ -1,4 +1,4 @@
-<h2>原文：<a href="https://sakurawald.github.io/database-design">[Database] Design</a></h2>
+<h2>原文：<a href="https://sakurawald.github.io/posts/database-design">[Database] Design</a></h2>
 <hr/>
 <p>title: "[Database] Design"
 date: 2023-01-22 21:01:39
