--- a/sakurawald.github.io/play on google pixel.html
+++ b/sakurawald.github.io/play on google pixel.html
@@ -1,4 +1,4 @@
-<h2>原文：<a href="https://sakurawald.github.io/play-on-google-pixel">play on google pixel</a></h2>
+<h2>原文：<a href="https://sakurawald.github.io/posts/play-on-google-pixel">play on google pixel</a></h2>
 <hr/>
 <p>title: "play on google pixel"
 date: 2023-02-27 05:46:02
