--- a/sakurawald.github.io/play on hexo.html
+++ b/sakurawald.github.io/play on hexo.html
@@ -1,4 +1,4 @@
-<h2>原文：<a href="https://sakurawald.github.io/play-on-hexo">play on hexo</a></h2>
+<h2>原文：<a href="https://sakurawald.github.io/posts/play-on-hexo">play on hexo</a></h2>
 <hr/>
 <p>title: "play on hexo"
 date: 2023-01-25 13:11:58
