--- a/sakurawald.github.io/play on kde.html
+++ b/sakurawald.github.io/play on kde.html
@@ -1,4 +1,4 @@
-<h2>原文：<a href="https://sakurawald.github.io/play-on-kde">play on kde</a></h2>
+<h2>原文：<a href="https://sakurawald.github.io/posts/play-on-kde">play on kde</a></h2>
 <hr/>
 <p>title: "play on kde"
 date: 2023-04-26 22:04:88
