--- a/sakurawald.github.io/play on stl.html
+++ b/sakurawald.github.io/play on stl.html
@@ -1,4 +1,4 @@
-<h2>原文：<a href="https://sakurawald.github.io/play-on-stl">play on stl</a></h2>
+<h2>原文：<a href="https://sakurawald.github.io/posts/play-on-stl">play on stl</a></h2>
 <hr/>
 <p>title: play on stl
 date: 2022-04-18 22:44:00
