--- a/sakurawald.github.io/play on vim.html
+++ b/sakurawald.github.io/play on vim.html
@@ -1,4 +1,4 @@
-<h2>原文：<a href="https://sakurawald.github.io/play-on-vim">play on vim</a></h2>
+<h2>原文：<a href="https://sakurawald.github.io/posts/play-on-vim">play on vim</a></h2>
 <hr/>
 <p>title: "play on vim"
 date: 2023-02-24 06:10:35
