--- a/sakurawald.github.io/good application set.html
+++ b/sakurawald.github.io/good application set.html
@@ -1,4 +1,4 @@
-<h2>原文：<a href="https://sakurawald.github.io/good-application-set">good application set</a></h2>
+<h2>原文：<a href="https://sakurawald.github.io/posts/good-application-set">good application set</a></h2>
 <hr/>
 <h2>title: good application set
 date: 2024-04-08 14:57:18
