--- a/sakurawald.github.io/play on anbox.html
+++ b/sakurawald.github.io/play on anbox.html
@@ -1,4 +1,4 @@
-<h2>原文：<a href="https://sakurawald.github.io/play-on-anbox">play on anbox</a></h2>
+<h2>原文：<a href="https://sakurawald.github.io/posts/play-on-anbox">play on anbox</a></h2>
 <hr/>
 <p>title: "play on anbox"
 date: 2022-06-09 17:41:00
