--- a/sakurawald.github.io/play-on-wordpress.html
+++ b/sakurawald.github.io/play-on-wordpress.html
@@ -1,4 +1,4 @@
-<h2>原文：<a href="https://sakurawald.github.io/play-on-wordpress">play-on-wordpress</a></h2>
+<h2>原文：<a href="https://sakurawald.github.io/posts/play-on-wordpress">play-on-wordpress</a></h2>
 <hr/>
 <p>title: "play-on-wordpress"
 date: 2020-10-05 17:48:00
