--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 45 个博客、8023 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 45 个博客、8026 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=blog.mauve.icu/Codeforces%20Round%20926%20%28Div.%202%29.html>2024-04-13 00:39:50 Codeforces Round 926 (Div. 2)</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20-%20355%20%E5%B7%A7%E5%90%88.html>2024-04-11 22:37:35 新爸五年计划 - 355 巧合</a></li>
+
+<li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E5%87%A0%E4%B8%AA%E6%93%8D%E4%BD%9C%E7%B3%BB%E7%BB%9F%E5%AE%9E%E9%AA%8C.html>2024-04-11 几个操作系统实验</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202414%20-%202024%20%E9%9A%A7%E9%81%93%E9%A9%AC%E8%AE%AD%E7%BB%83%E7%AC%AC%209%20%E5%91%A8%20%EF%BC%9F.html>2024-04-10 19:36:28 折返点 2414 - 2024 隧道马训练第 9 周 ？</a></li>
 
