--- a/index.html
+++ b/index.html
@@ -6,16 +6,24 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 45 个博客、8026 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 45 个博客、8030 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
 
+<li><a href=iphyer.github.io/2024%20Q1%20%E6%80%BB%E7%BB%93.html>2024-04-15 20:54 2024 Q1 总结</a></li>
+
+<li><a href=babyno.top/%E5%9C%A8%E6%9C%AC%E5%9C%B0%E8%B7%91%E4%B8%80%E4%B8%AAAI%E6%A8%A1%E5%9E%8B%284%29%20-%20%E4%BC%9A%E8%AF%B4%E8%AF%9D%E7%9A%84%E6%A8%A1%E5%9E%8B.html>2024-04-15 10:36:13 在本地跑一个AI模型(4) - 会说话的模型</a></li>
+
+<li><a href=blog.mauve.icu/Codeforces%20Round%20927%20%28Div.%203%29.html>2024-04-14 19:55:07 Codeforces Round 927 (Div. 3)</a></li>
+
 <li><a href=blog.mauve.icu/Codeforces%20Round%20926%20%28Div.%202%29.html>2024-04-13 00:39:50 Codeforces Round 926 (Div. 2)</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20-%20355%20%E5%B7%A7%E5%90%88.html>2024-04-11 22:37:35 新爸五年计划 - 355 巧合</a></li>
+
+<li><a href=qingbob.com/%E6%88%91%E5%81%9A%E4%BA%86%E4%B8%80%E6%AC%BE%E5%8F%91%E7%8E%B0%E6%92%AD%E5%AE%A2%E7%9A%84%E5%B7%A5%E5%85%B7.html>2024-04-11 我做了一款发现播客的工具</a></li>
 
 <li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E5%87%A0%E4%B8%AA%E6%93%8D%E4%BD%9C%E7%B3%BB%E7%BB%9F%E5%AE%9E%E9%AA%8C.html>2024-04-11 几个操作系统实验</a></li>
 
